# bitcoin-rust

chain/: Cargo.toml
chain/src/: block.rs  block_header.rs  indexed_block.rs  indexed_header.rs  indexed_transaction.rs  lib.rs  merkle_root.rs  read_and_hash.rs  transaction.rs
crypto/: Cargo.toml
keys/: Cargo.toml
keys/src/: address.rs  lib.rs  network.rs
primitives/: Cargo.toml
primitives/src/: hash.rs
script/: Cargo.toml
script/src/: builder.rs
serialization/: Cargo.toml
