[package]
name = "bitcrypto"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> & chainpool <http://chainx.org>"]

[dependencies]
siphasher = { version = "0.1.1", optional = true }
primitives = { path = "../primitives", default-features = false }
sr-std = { package = "sp-std", version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/paritytech/substrate.git" }
rand = { version = "^0.3", optional = true }
rustc-serialize = { version = "^0.3", optional = true }

[features]
default = ["std"]
std = [
	"siphasher",
	"rand",
	"rustc-serialize",
	"primitives/std",
	"sr-std/std",
]
