[package]
name = "serialization"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com> & chainpool <http://chainx.org>"]

[dependencies]
byteorder = { version = "1", default-features = false }
primitives = { path = "../primitives", default-features = false }
sr-std = { package = "sp-std", version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [ "byteorder/std", "primitives/std", "sr-std/std"]
